--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         main > ol li,  ol li:before{
-            background-color: var(--block-color, #333333);
-            background: var(--block-color, #333333);
+            background-color: var(--header-c, #333333);
+            background: var(--header-c, #333333);
             padding-bottom: 1em;
             padding-left: 0.5em;
         }
@@ -48,7 +48,7 @@
             <h2>Joe Berlucchi's Portfolio Site</h2>
         </section>
         <nav>
-            <ul>
+            <ul id="nav-links">
                 <li>
                    <a href="../index.html">Home</a>
                 </li>
@@ -110,6 +110,6 @@
         </ol>
 
     </main>
-
+    <script src="../javascript/light_dark_pages.js"></script>
 </body>
 </html>
