--- a/pages/resume.html
+++ b/pages/resume.html
@@ -24,7 +24,7 @@
             <h2>Joe Berlucchi's Portfolio Site</h2>
         </section>
         <nav>
-            <ul>
+            <ul id="nav-links">
                 <li>
                    <a href="../index.html">Home</a>
                 </li>
@@ -49,6 +49,6 @@
             <div>No online PDF viewer installed. Download <a href="../media/pdf/JosephBerlucchi.pdf"> here</a>.</div> 
         </object>
     </main>
-
+    <script src="../javascript/light_dark_pages.js"></script>
 </body>
 </html>
