--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="../media/images/surfing-icon.ico">
     <link rel="stylesheet" href="../css/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../javascript/light_dark_pages.js"></script>
     <style>
         main > ol li,  ol li:before{
             background-color: var(--header-c, #333333);
@@ -110,6 +111,8 @@
         </ol>
 
     </main>
-    <script src="../javascript/light_dark_pages.js"></script>
+    <script type="text/javascript">
+        inital();
+    </script>
 </body>
 </html>
