--- a/pages/resume.html
+++ b/pages/resume.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="../media/images/surfing-icon.ico">
     <link rel="stylesheet" href="../css/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../javascript/light_dark_pages.js"></script>
     <style>
         main {
             margin: 0;
@@ -49,6 +50,8 @@
             <div>No online PDF viewer installed. Download <a href="../media/pdf/JosephBerlucchi.pdf"> here</a>.</div> 
         </object>
     </main>
-    <script src="../javascript/light_dark_pages.js"></script>
+    <script type="text/javascript">
+        inital();
+    </script>
 </body>
 </html>
