--- a/pages/work_experience.html
+++ b/pages/work_experience.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="../media/images/surfing-icon.ico">
     <link rel="stylesheet" href="../css/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../javascript/light_dark_pages.js"></script>
     <style>
         table, th, td {
             border: 1px solid #2c2c2c;
@@ -178,6 +179,8 @@
         </ol>
 
     </main>
-    <script src="../javascript/light_dark_pages.js"></script>
+    <script type="text/javascript">
+        inital();
+    </script>
 </body>
 </html>
